@@ -1,5 +1,10 @@
 2011-10-07  Mikael Morin  <mikael.morin@sfr.fr>
 
+	* trans-array.c (gfc_conv_section_startstride): Factor common
+	array ref references.
+
+2011-10-07  Mikael Morin  <mikael.morin@sfr.fr>
+
 	* trans-array.c (gfc_conv_expr_descriptor): Use codim instead of
 	loop.codimen as argument to gfc_get_array_type_bounds.
 
